--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>О ресурсе</title>
+<!-- begin _includes/seo.html -->
+
+<title>О ресурсе</title>
 <meta name="description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
 
 
@@ -130,7 +132,7 @@
         webvisor:true
    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy"></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy" decoding="async"></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -160,6 +162,9 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links">
+<li class="masthead__menu-item">
+              <a href="/hair/">Волосы</a>
+            </li>
 <li class="masthead__menu-item">
               <a href="/gemorroj/">Геморрой</a>
             </li>
@@ -238,28 +243,28 @@
 <p>При описании заболеваний наши работники полагаются не только лишь  на базисные абстрактные познания и личный практический навык, но и на свежайшие работы, публикуемые в научных мед публикациях.</p>
 
 <h3 id="сотрудники">Сотрудники</h3>
-<p><img src="/assets/images/about/kostenko.jpg" alt="Костенко" class="sdb-img2" loading="lazy">
+<p><img src="/assets/images/about/kostenko.jpg" alt="Костенко" class="sdb-img2" loading="lazy" decoding="async">
 <strong>Селизовский Владимир Васильевич</strong> - высочайшая квалификационная категория по вертебрологии.
  Зав.вертебрологическим центром ГКБ “Воронежская городская клиническая больница № 11, стационар”.</p>
 
-<p><img src="/assets/images/about/sastripcin.jpg" alt="Састрпцин" class="sdb-img2" loading="lazy">
+<p><img src="/assets/images/about/sastripcin.jpg" alt="Састрпцин" class="sdb-img2" loading="lazy" decoding="async">
 <strong>Састрпцин Антон Михайлович</strong> - невропатолог, сертифицированный консультант по ГВ ВОЗ\ЮНИСЕФ, начальник невропатолог  центра.</p>
 
-<p><img src="/assets/images/about/rusak.jpg" alt="Русак" class="sdb-img2" loading="lazy">
+<p><img src="/assets/images/about/rusak.jpg" alt="Русак" class="sdb-img2" loading="lazy" decoding="async">
 <strong>Русак Ирина Юрьевна</strong> - Мануальный терапевт, остеопат, рефлексотерапевт. Стаж 35 лет. Категории: сертифицированный профессионал по остеопатии.</p>
 
-<p><img src="/assets/images/about/chernobay.jpg" alt="Чернобай" class="sdb-img2" loading="lazy">
+<p><img src="/assets/images/about/chernobay.jpg" alt="Чернобай" class="sdb-img2" loading="lazy" decoding="async">
 <strong>Чернобай Сергей Львович</strong> - мануальный терапевт, остеопат, терапевт, физиотерапевт
 Стаж 43 года, д.м.н.</p>
 
-<p><img src="/assets/images/about/zdor.jpg" alt="Здор" class="sdb-img2" loading="lazy">
+<p><img src="/assets/images/about/zdor.jpg" alt="Здор" class="sdb-img2" loading="lazy" decoding="async">
 <strong>Здор Александр Анатольевич</strong> -  доктор невролог высочайшей категории, рефлексотерапевт
 Стаж 36 лет, высшая категория. Заведующий Центром клинической неврологии</p>
 
-<p><img src="/assets/images/about/toporkova.jpg" alt="Топоркова" class="sdb-img2" loading="lazy">
+<p><img src="/assets/images/about/toporkova.jpg" alt="Топоркова" class="sdb-img2" loading="lazy" decoding="async">
 <strong>Топоркова Ольга Вадимовна</strong> -  учащийся ВУза 4-го курса СЗГМУ им. И.И. Мечникова. Профессия - Медико-профилактическое дело.</p>
 
-<p><img src="/assets/images/about/polovinkin.jpg" alt="Половинкин" class="sdb-img2" loading="lazy">
+<p><img src="/assets/images/about/polovinkin.jpg" alt="Половинкин" class="sdb-img2" loading="lazy" decoding="async">
 <strong>Половинкин Николай Алексеевич</strong> -  Врач скорой помощи, терапевт. Стаж 2 года.</p>
 
 <h3 id="связаться-с-нами">Связаться с нами</h3>
@@ -345,7 +350,7 @@
   -->
 </div>
 
-<div class="page__footer-copyright">© 2020 Селизовский Владимир Васильевич. </div>
+<div class="page__footer-copyright">© 2023 Селизовский Владимир Васильевич. </div>
 <div class="page__footer-copyright">
 <p><a href="/legal/terms/">Условия и политика конфиденциальности</a></p>
 <p><a href="#" class="back_to_top">Наверх</a></p>
@@ -360,6 +365,7 @@
     
   <script src="/assets/js/main.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+
 
 
 <!-- Including InstantSearch.js library and styling -->
@@ -416,6 +422,7 @@ search.addWidget(
 // Starting the search
 search.start();
 </script>
+
 
 
 
