--- a/gemorroj/index.html
+++ b/gemorroj/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Статьи о лечении геморроя</title>
+<!-- begin _includes/seo.html -->
+
+<title>Статьи о лечении геморроя</title>
 <meta name="description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
 
 
@@ -132,7 +134,7 @@
         webvisor:true
    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy"></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy" decoding="async"></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -162,6 +164,9 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links">
+<li class="masthead__menu-item">
+              <a href="/hair/">Волосы</a>
+            </li>
 <li class="masthead__menu-item">
               <a href="/gemorroj/">Геморрой</a>
             </li>
@@ -231,7 +236,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Упражнения помогут в борьбе с геморроем</em>
-<img src="/assets/images/articles/gemorroj/stul.jpg" alt="stul" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/stul.jpg" alt="stul" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/stul/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -248,7 +253,7 @@
   3 мин на чтение
 </span>
         <p><em>Эти 10 техник и упражнений от физиотерапевта тазового дна помогут вам в долгосрочной перспективе избавиться от геморроя.</em>
-<img src="/assets/images/articles/gemorroj/kegel.jpg" alt="kegel" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/kegel.jpg" alt="kegel" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/uprajnenija/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -265,7 +270,7 @@
   2 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
-<img src="/assets/images/articles/gemorroj/gemorroj.jpg" alt="боль в пояснице" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/gemorroj.jpg" alt="боль в пояснице" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/gemorroj/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -282,7 +287,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/sidet.jpg" alt="sidet" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/sidet.jpg" alt="sidet" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/sidet/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -299,7 +304,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/led.jpg" alt="Поднятие тяжестей" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/led.jpg" alt="Поднятие тяжестей" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/led/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -316,7 +321,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив плохое кровообращение!</em>
-<img src="/assets/images/articles/gemorroj/krovosnabjenie.png" alt="Кровообращение" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/krovosnabjenie.png" alt="Кровообращение" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/krovoobrashhenie/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -333,7 +338,7 @@
   1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
-<img src="/assets/images/articles/gemorroj/zastoy-krovi.jpg" alt="Застой крови при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/zastoy-krovi.jpg" alt="Застой крови при геморрое" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/bad-zastoj-krovi/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -350,7 +355,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
-<img src="/assets/images/articles/gemorroj/zapor.jpg" alt="запор при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/zapor.jpg" alt="запор при геморрое" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/bad-zapor/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -367,7 +372,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
-<img src="/assets/images/articles/gemorroj/malo-vody.jpg" alt="мало воды" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/malo-vody.jpg" alt="мало воды" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/bad-vater/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -384,7 +389,7 @@
   1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/gem-pit.png" alt="питание при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/gem-pit.png" alt="питание при геморрое" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/bad-pitanie/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -483,7 +488,7 @@
   -->
 </div>
 
-<div class="page__footer-copyright">© 2020 Селизовский Владимир Васильевич. </div>
+<div class="page__footer-copyright">© 2023 Селизовский Владимир Васильевич. </div>
 <div class="page__footer-copyright">
 <p><a href="/legal/terms/">Условия и политика конфиденциальности</a></p>
 <p><a href="#" class="back_to_top">Наверх</a></p>
@@ -498,6 +503,7 @@
     
   <script src="/assets/js/main.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+
 
 
 <!-- Including InstantSearch.js library and styling -->
@@ -554,6 +560,7 @@ search.addWidget(
 // Starting the search
 search.start();
 </script>
+
 
 
 
