--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Медицинский портал для врачей</title>
+<!-- begin _includes/seo.html -->
+
+<title>Медицинский портал для врачей</title>
 <meta name="description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
 
 
@@ -132,7 +134,7 @@
         webvisor:true
    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy"></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy" decoding="async"></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -162,6 +164,9 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links">
+<li class="masthead__menu-item">
+              <a href="/hair/">Волосы</a>
+            </li>
 <li class="masthead__menu-item">
               <a href="/gemorroj/">Геморрой</a>
             </li>
@@ -221,6 +226,24 @@
 
 
     <article class="post archive__item-excerpt">
+      <h2><a href="/hair/microneedling/">Как делать микронидлинг (мезороллер) от выпадения волос</a></h2>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  4 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 01/09/2023</span>
+        <div>
+<p><em>Исследования показывают, что микронидлинг не менее эффективен, чем миноксидил, при достаточном размере выборки.</em>
+<img src="/assets/images/hair/mezoroller/mezoroller.png" alt="mezoroller" loading="lazy" decoding="async"></p>
+</div>
+      <div><a href="/hair/microneedling/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
       <h2><a href="/gemorroj/stul/">Какой должен быть стул [для лечения геморроя]</a></h2>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
@@ -232,7 +255,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/24/2020</span>
         <div>
 <p><em>Упражнения помогут в борьбе с геморроем</em>
-<img src="/assets/images/articles/gemorroj/stul.jpg" alt="stul" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/stul.jpg" alt="stul" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/stul/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -250,7 +273,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/24/2020</span>
         <div>
 <p><em>Эти 10 техник и упражнений от физиотерапевта тазового дна помогут вам в долгосрочной перспективе избавиться от геморроя.</em>
-<img src="/assets/images/articles/gemorroj/kegel.jpg" alt="kegel" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/kegel.jpg" alt="kegel" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/uprajnenija/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -268,7 +291,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/19/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
-<img src="/assets/images/articles/gemorroj/gemorroj.jpg" alt="боль в пояснице" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/gemorroj.jpg" alt="боль в пояснице" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/gemorroj/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -286,7 +309,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/19/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/sidet.jpg" alt="sidet" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/sidet.jpg" alt="sidet" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/sidet/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -304,7 +327,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/19/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/led.jpg" alt="Поднятие тяжестей" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/led.jpg" alt="Поднятие тяжестей" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/led/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -322,7 +345,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/19/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив плохое кровообращение!</em>
-<img src="/assets/images/articles/gemorroj/krovosnabjenie.png" alt="Кровообращение" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/krovosnabjenie.png" alt="Кровообращение" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/krovoobrashhenie/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -340,7 +363,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
-<img src="/assets/images/articles/gemorroj/zastoy-krovi.jpg" alt="Застой крови при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/zastoy-krovi.jpg" alt="Застой крови при геморрое" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/bad-zastoj-krovi/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -358,7 +381,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
-<img src="/assets/images/articles/gemorroj/zapor.jpg" alt="запор при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/zapor.jpg" alt="запор при геморрое" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/bad-zapor/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -376,27 +399,9 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
-<img src="/assets/images/articles/gemorroj/malo-vody.jpg" alt="мало воды" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/malo-vody.jpg" alt="мало воды" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/bad-vater/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h2><a href="/gemorroj/bad-pitanie/">Геморрой и неправильное питание [вредный фактор]</a></h2>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
-        <div>
-<p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/gem-pit.png" alt="питание при геморрое" loading="lazy"></p>
-</div>
-      <div><a href="/gemorroj/bad-pitanie/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
@@ -505,7 +510,7 @@
   -->
 </div>
 
-<div class="page__footer-copyright">© 2020 Селизовский Владимир Васильевич. </div>
+<div class="page__footer-copyright">© 2023 Селизовский Владимир Васильевич. </div>
 <div class="page__footer-copyright">
 <p><a href="/legal/terms/">Условия и политика конфиденциальности</a></p>
 <p><a href="#" class="back_to_top">Наверх</a></p>
@@ -520,6 +525,7 @@
     
   <script src="/assets/js/main.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+
 
 
 <!-- Including InstantSearch.js library and styling -->
@@ -576,6 +582,7 @@ search.addWidget(
 // Starting the search
 search.start();
 </script>
+
 
 
 
