--- a/page2/index.html
+++ b/page2/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Медицинский портал для врачей - Страница 2 - Страница 2</title>
+<!-- begin _includes/seo.html -->
+
+<title>Медицинский портал для врачей - Страница 2 - Страница 2</title>
 <meta name="description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
 
 
@@ -134,7 +136,7 @@
         webvisor:true
    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy"></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy" decoding="async"></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -164,6 +166,9 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links">
+<li class="masthead__menu-item">
+              <a href="/hair/">Волосы</a>
+            </li>
 <li class="masthead__menu-item">
               <a href="/gemorroj/">Геморрой</a>
             </li>
@@ -223,6 +228,24 @@
 
 
     <article class="post archive__item-excerpt">
+      <h2><a href="/gemorroj/bad-pitanie/">Геморрой и неправильное питание [вредный фактор]</a></h2>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
+        <div>
+<p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
+<img src="/assets/images/articles/gemorroj/gem-pit.png" alt="питание при геморрое" loading="lazy" decoding="async"></p>
+</div>
+      <div><a href="/gemorroj/bad-pitanie/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
       <h2><a href="/gemorroj/bad-peregrev/">Перегрев области таза при геморрое [вредный фактор]</a></h2>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
@@ -234,7 +257,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
-<img src="/assets/images/articles/gemorroj/peregrwev.jpg" alt="Перегрев области таза при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/peregrwev.jpg" alt="Перегрев области таза при геморрое" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/bad-peregrev/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -252,7 +275,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
-<img src="/assets/images/articles/gemorroj/tuj.jpg" alt="Факторы, способствующие развитию геморроя" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/tuj.jpg" alt="Факторы, способствующие развитию геморроя" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/bad-factors/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -270,7 +293,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
-<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/bad-defekacion/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -288,7 +311,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры!</em>
-<img src="/assets/images/articles/gemorroj/kal.jpg" alt="запор при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/kal.jpg" alt="запор при геморрое" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/zapor/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -306,7 +329,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/tyajest.jpg" alt="Поднятие тяжестей" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/tyajest.jpg" alt="Поднятие тяжестей" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/tyajesty/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -324,7 +347,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/gem-pit.png" alt="питание при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/gem-pit.png" alt="питание при геморрое" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/pitanie/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -342,7 +365,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Полное и окончательное избавление от геморроя возможно лишь, наладив процесс дефекации</em>
-<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/defekacion/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -360,7 +383,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
 <p><em>Перечислен перечень того, что нужно делать чтобы избавиться от геморроя</em>
-<img src="/assets/images/articles/gemorroj/check-list.png" alt="check-list" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/check-list.png" alt="check-list" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/gemorroj/check-list/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -378,27 +401,9 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/18/2019</span>
         <div>
 <p><em>Рассмотрим осанку как один из многочисленных факторов, провоцирующих хронические боли в пояснице.</em>
-<img src="/assets/images/articles/poyasnica/poyasnica10.jpg" alt="боль в пояснице" loading="lazy"></p>
+<img src="/assets/images/articles/poyasnica/poyasnica10.jpg" alt="боль в пояснице" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/poyasnica/nepravilnaya-osanka/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h2><a href="/poyasnica/osanka/">Правильная осанка для избавления от болей в посянице</a></h2>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  10 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/17/2019</span>
-        <div>
-<p><em>Рассмотрим осанку как один из многочисленных факторов, провоцирующих хронические боли в пояснице.</em>
-<img src="/assets/images/articles/poyasnica/poyasnica9.jpg" alt="боль в пояснице" loading="lazy"></p>
-</div>
-      <div><a href="/poyasnica/osanka/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
@@ -506,7 +511,7 @@
   -->
 </div>
 
-<div class="page__footer-copyright">© 2020 Селизовский Владимир Васильевич. </div>
+<div class="page__footer-copyright">© 2023 Селизовский Владимир Васильевич. </div>
 <div class="page__footer-copyright">
 <p><a href="/legal/terms/">Условия и политика конфиденциальности</a></p>
 <p><a href="#" class="back_to_top">Наверх</a></p>
@@ -521,6 +526,7 @@
     
   <script src="/assets/js/main.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+
 
 
 <!-- Including InstantSearch.js library and styling -->
@@ -577,6 +583,7 @@ search.addWidget(
 // Starting the search
 search.start();
 </script>
+
 
 
 
