--- a/page3/index.html
+++ b/page3/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Медицинский портал для врачей - Страница 3 - Страница 3</title>
+<!-- begin _includes/seo.html -->
+
+<title>Медицинский портал для врачей - Страница 3 - Страница 3</title>
 <meta name="description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
 
 
@@ -134,7 +136,7 @@
         webvisor:true
    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy"></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy" decoding="async"></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -164,6 +166,9 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links">
+<li class="masthead__menu-item">
+              <a href="/hair/">Волосы</a>
+            </li>
 <li class="masthead__menu-item">
               <a href="/gemorroj/">Геморрой</a>
             </li>
@@ -234,9 +239,27 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/17/2019</span>
         <div>
 <p><em>Полное и окончательное избавление от боли в области поясницы и нижних конечностей.</em>
-<img src="/assets/images/articles/poyasnica/poyasnica.jpg" alt="боль в пояснице" loading="lazy"></p>
+<img src="/assets/images/articles/poyasnica/poyasnica.jpg" alt="боль в пояснице" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/poyasnica/bol-v-poyasnice/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h2><a href="/poyasnica/osanka/">Правильная осанка для избавления от болей в посянице</a></h2>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  10 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/17/2019</span>
+        <div>
+<p><em>Рассмотрим осанку как один из многочисленных факторов, провоцирующих хронические боли в пояснице.</em>
+<img src="/assets/images/articles/poyasnica/poyasnica9.jpg" alt="боль в пояснице" loading="lazy" decoding="async"></p>
+</div>
+      <div><a href="/poyasnica/osanka/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
@@ -252,27 +275,9 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/15/2019</span>
         <div>
 <p><em>Рассматриваются причины возникновения боли в нижней части спины, которые часто не замечают при обследовании.</em>
-<img src="/assets/images/articles/poyasnica/poyasnica8.jpg" alt="боль в пояснице" loading="lazy"></p>
+<img src="/assets/images/articles/poyasnica/poyasnica8.jpg" alt="боль в пояснице" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/zagadka-boli-v-poyasnice/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h2><a href="/articles/trapeciya-anatomiya/">Трапециевидная мышца - анатомия, миофасциальный синдром</a></h2>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/12/2019</span>
-        <div>
-<p><em>Верхняя, средняя и нижняя части трапециевидной мышцы характеризуются разным направлением волокон и часто обладают разными функциональными способностями и возможностями.</em>
-<img src="/assets/images/articles/trapeciya/trapeciya2.jpg" alt="Боль в верхней части спины" loading="lazy"></p>
-</div>
-      <div><a href="/articles/trapeciya-anatomiya/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
@@ -288,9 +293,27 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/12/2019</span>
         <div>
 <p><em>В этой статье объясняются основы того, какое влияение оказывают мышцы на боли в области головы и темени.</em>
-<img src="/assets/images/articles/trapeciya/trapeciya.jpg" alt="Боль в верхней части спины" loading="lazy"></p>
+<img src="/assets/images/articles/trapeciya/trapeciya.jpg" alt="Боль в верхней части спины" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/trapeciya/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h2><a href="/articles/trapeciya-anatomiya/">Трапециевидная мышца - анатомия, миофасциальный синдром</a></h2>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/12/2019</span>
+        <div>
+<p><em>Верхняя, средняя и нижняя части трапециевидной мышцы характеризуются разным направлением волокон и часто обладают разными функциональными способностями и возможностями.</em>
+<img src="/assets/images/articles/trapeciya/trapeciya2.jpg" alt="Боль в верхней части спины" loading="lazy" decoding="async"></p>
+</div>
+      <div><a href="/articles/trapeciya-anatomiya/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
@@ -306,7 +329,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/11/2019</span>
         <div>
 <p><em>Кратко изложено логическое обоснование лечения патологических изменений в височно-нижнечелюстном суставе</em>
-<img src="/assets/images/articles/head/diagnostika2.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/diagnostika2.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/lechenie-visochno-nizhnechelyustnogo-sustava/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -324,7 +347,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/11/2019</span>
         <div>
 <p><em>В этой статье объясняются основы того, какое влияение оказывают мышцы на боли в области головы и шеи.</em>
-<img src="/assets/images/articles/head/head-pain5.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/head-pain5.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/ustranenie-boli-golovy-i-shei/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -342,7 +365,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/11/2019</span>
         <div>
 <p><em>Основная цель этих упражнений — помочь восстановить нормальное положение верхнего плечевого пояса, устранить грудной кифоз, а также придать нормальное положение голове.</em>
-<img src="/assets/images/articles/head/osanka.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/osanka.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/uprazhneniya-dlya-horoshej-osanki/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -360,7 +383,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/11/2019</span>
         <div>
 <p><em>В этой статье объясняются основы того, как определить боль.</em>
-<img src="/assets/images/articles/head/bol.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/bol.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/opredelenie-boli/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -378,27 +401,9 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/10/2019</span>
         <div>
 <p><em>В этой статье рассмотрены научно-практические исследования нарушений височно-нижнечелюстного сустава и переднего положения головы, а также комплексное лечение или коррекция каждого из этих патологических состояний.</em>
-<img src="/assets/images/articles/head/sustav.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/sustav.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/narushenij-visochno-nizhnechelyustnogo-sustava/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h2><a href="/faktory/vlajnost-vozduha/">Какая Влажность должна быть в Квартире</a></h2>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  2 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/09/2019</span>
-        <div>
-<p><em>В этой статье мы объясним проблемы и влияние недостатка влажности для здоровья человека.</em>
-<img src="/assets/images/factory/vozduh/vlajnost-vozduha.jpg" alt="влажность воздуха" loading="lazy"></p>
-</div>
-      <div><a href="/faktory/vlajnost-vozduha/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
@@ -506,7 +511,7 @@
   -->
 </div>
 
-<div class="page__footer-copyright">© 2020 Селизовский Владимир Васильевич. </div>
+<div class="page__footer-copyright">© 2023 Селизовский Владимир Васильевич. </div>
 <div class="page__footer-copyright">
 <p><a href="/legal/terms/">Условия и политика конфиденциальности</a></p>
 <p><a href="#" class="back_to_top">Наверх</a></p>
@@ -521,6 +526,7 @@
     
   <script src="/assets/js/main.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+
 
 
 <!-- Including InstantSearch.js library and styling -->
@@ -577,6 +583,7 @@ search.addWidget(
 // Starting the search
 search.start();
 </script>
+
 
 
 
