--- a/page4/index.html
+++ b/page4/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Медицинский портал для врачей - Страница 4 - Страница 4</title>
+<!-- begin _includes/seo.html -->
+
+<title>Медицинский портал для врачей - Страница 4 - Страница 4</title>
 <meta name="description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
 
 
@@ -132,7 +134,7 @@
         webvisor:true
    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy"></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy" decoding="async"></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -162,6 +164,9 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links">
+<li class="masthead__menu-item">
+              <a href="/hair/">Волосы</a>
+            </li>
 <li class="masthead__menu-item">
               <a href="/gemorroj/">Геморрой</a>
             </li>
@@ -232,27 +237,27 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/09/2019</span>
         <div>
 <p><em>Рассмотрите достоинства и недостатки четырех методов увлажнения, чтобы выбрать метод увлажнения, который соответствует вашей цели.</em>
-<img src="/assets/images/factory/vozduh/uvlazhnitel.jpg" alt="влажность воздуха" loading="lazy"></p>
+<img src="/assets/images/factory/vozduh/uvlazhnitel.jpg" alt="влажность воздуха" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/faktory/uvlazhnitel/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
     <article class="post archive__item-excerpt">
-      <h2><a href="/articles/cherennaya-travma/">Черепная травма как причина головной боли н боли в области шеи</a></h2>
+      <h2><a href="/faktory/vlajnost-vozduha/">Какая Влажность должна быть в Квартире</a></h2>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
 
 
 
-  1 мин на чтение
+  2 мин на чтение
 </span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/09/2019</span>
         <div>
-<p><em>Головная боль и другие симптомы могут возникать после минимальной закрытой травмы головы с ушибом головного мозга или хлыстовых сгибательно-разгибательных повреждений без ушибов головного мозга.</em>
-<img src="/assets/images/articles/head/cherennaya-travma.jpg" alt="головная боль" loading="lazy"></p>
+<p><em>В этой статье мы объясним проблемы и влияние недостатка влажности для здоровья человека.</em>
+<img src="/assets/images/factory/vozduh/vlajnost-vozduha.jpg" alt="влажность воздуха" loading="lazy" decoding="async"></p>
 </div>
-      <div><a href="/articles/cherennaya-travma/" class="read-more btn btn--info">Читать дальше</a></div>
+      <div><a href="/faktory/vlajnost-vozduha/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
@@ -268,7 +273,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
         <div>
 <p><em>В эту категорию головной и шейной боли официально включены «некоторые типы головной боли, не удовлетворяющие критериям заболеваний, описанных Международным обществом по изучению боли в области головы».</em>
-<img src="/assets/images/articles/head/head-pain4.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/head-pain4.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/neklassificiruemye-tipy-shejnoj-i-golovnoj-boli/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -286,7 +291,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
         <div>
 <p><em>Эта боль характеризует нарушения, затрагивающие поврежденные нервы и функционально чувствительные компоненты некоторых черепных нервов, а также шейные нервы.</em>
-<img src="/assets/images/articles/head/nevralgiya.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/nevralgiya.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/kranialnaya-nevralgiya/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -304,7 +309,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
         <div>
 <p><em>В эту категорию включены различные заболевания органов и систем, такие как воспаление, инфекция, дегенерация, опухолевые процессы и обструкция, способные поражать любой орган в краниально-лицевой области, включая височно-нижнечелюстные суставы и мышцы головы и шеи.</em>
-<img src="/assets/images/articles/head/head-pain3.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/head-pain3.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/golovnaya-bol-zabolevaniya-cherepa/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -322,7 +327,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
         <div>
 <p><em>В этой статье объясняются основы того, какое влияение оказывают мышцы на боли в области головы и темени.</em>
-<img src="/assets/images/articles/head/head-pain.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/head-pain.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/golovnaya-bol-putevoditel/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -340,7 +345,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
         <div>
 <p><em>Подобная головная боль появляется в результате чрезмерного употребления симптоматических медикаментов, таких как аспирин, парацетамол, нестероидные противовоспалительные средства или препараты спорыньи.</em>
-<img src="/assets/images/articles/head/priemom-veshchestv.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/priemom-veshchestv.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/diety/golovnaya-bol-priemom-veshchestv/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -358,7 +363,7 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
         <div>
 <p><em>Головная боль обоих видов характеризуется некоторыми клиническими проявлениями, включая локализацию, качество, интенсивность и односторонность боли в сочетании с вегетативными феноменами и перемежающейся природой, отдельными приступами головной боли, длящейся от нескольких минут до нескольких часов.</em>
-<img src="/assets/images/articles/head/gisgaminovaya-golovnaya-bol.jpg" alt="Гисгаминовая головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/gisgaminovaya-golovnaya-bol.jpg" alt="Гисгаминовая головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/gisgaminovaya-golovnaya-bol/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
@@ -376,9 +381,27 @@
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
         <div>
 <p><em>В этой статье представлены различные диагностические категории хронической головной боли, боли в области лица, ротовой полости и шеи и подробно изложено, какие заболевания могут характеризоваться сочетанием определенных симптомов с миофасциальной болью.</em>
-<img src="/assets/images/articles/head/diagnostika.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/diagnostika.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 </div>
       <div><a href="/articles/diagnosticheskie-kategorii/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h2><a href="/articles/cherennaya-travma/">Черепная травма как причина головной боли н боли в области шеи</a></h2>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
+        <div>
+<p><em>Головная боль и другие симптомы могут возникать после минимальной закрытой травмы головы с ушибом головного мозга или хлыстовых сгибательно-разгибательных повреждений без ушибов головного мозга.</em>
+<img src="/assets/images/articles/head/cherennaya-travma.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
+</div>
+      <div><a href="/articles/cherennaya-travma/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
@@ -489,7 +512,7 @@
   -->
 </div>
 
-<div class="page__footer-copyright">© 2020 Селизовский Владимир Васильевич. </div>
+<div class="page__footer-copyright">© 2023 Селизовский Владимир Васильевич. </div>
 <div class="page__footer-copyright">
 <p><a href="/legal/terms/">Условия и политика конфиденциальности</a></p>
 <p><a href="#" class="back_to_top">Наверх</a></p>
@@ -504,6 +527,7 @@
     
   <script src="/assets/js/main.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+
 
 
 <!-- Including InstantSearch.js library and styling -->
@@ -560,6 +584,7 @@ search.addWidget(
 // Starting the search
 search.start();
 </script>
+
 
 
 
