--- a/diety/index.html
+++ b/diety/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Диеты о здоровье</title>
+<!-- begin _includes/seo.html -->
+
+<title>Диеты о здоровье</title>
 <meta name="description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
 
 
@@ -130,7 +132,7 @@
         webvisor:true
    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy"></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy" decoding="async"></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -160,6 +162,9 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links">
+<li class="masthead__menu-item">
+              <a href="/hair/">Волосы</a>
+            </li>
 <li class="masthead__menu-item">
               <a href="/gemorroj/">Геморрой</a>
             </li>
@@ -229,7 +234,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Подобная головная боль появляется в результате чрезмерного употребления симптоматических медикаментов, таких как аспирин, парацетамол, нестероидные противовоспалительные средства или препараты спорыньи.</em>
-<img src="/assets/images/articles/head/priemom-veshchestv.jpg" alt="головная боль" loading="lazy"></p>
+<img src="/assets/images/articles/head/priemom-veshchestv.jpg" alt="головная боль" loading="lazy" decoding="async"></p>
 
       <a href="/diety/golovnaya-bol-priemom-veshchestv/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -290,7 +295,7 @@
   -->
 </div>
 
-<div class="page__footer-copyright">© 2020 Селизовский Владимир Васильевич. </div>
+<div class="page__footer-copyright">© 2023 Селизовский Владимир Васильевич. </div>
 <div class="page__footer-copyright">
 <p><a href="/legal/terms/">Условия и политика конфиденциальности</a></p>
 <p><a href="#" class="back_to_top">Наверх</a></p>
@@ -305,6 +310,7 @@
     
   <script src="/assets/js/main.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+
 
 
 <!-- Including InstantSearch.js library and styling -->
@@ -361,6 +367,7 @@ search.addWidget(
 // Starting the search
 search.start();
 </script>
+
 
 
 
