--- a/gemorroj/page2/index.html
+++ b/gemorroj/page2/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Статьи о лечении геморроя - Страница 2 - Страница 2</title>
+<!-- begin _includes/seo.html -->
+
+<title>Статьи о лечении геморроя - Страница 2 - Страница 2</title>
 <meta name="description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
 
 
@@ -132,7 +134,7 @@
         webvisor:true
    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy"></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" loading="lazy" decoding="async"></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -162,6 +164,9 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links">
+<li class="masthead__menu-item">
+              <a href="/hair/">Волосы</a>
+            </li>
 <li class="masthead__menu-item">
               <a href="/gemorroj/">Геморрой</a>
             </li>
@@ -231,7 +236,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
-<img src="/assets/images/articles/gemorroj/peregrwev.jpg" alt="Перегрев области таза при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/peregrwev.jpg" alt="Перегрев области таза при геморрое" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/bad-peregrev/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -248,7 +253,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
-<img src="/assets/images/articles/gemorroj/tuj.jpg" alt="Факторы, способствующие развитию геморроя" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/tuj.jpg" alt="Факторы, способствующие развитию геморроя" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/bad-factors/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -265,7 +270,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
-<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/bad-defekacion/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -282,7 +287,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры!</em>
-<img src="/assets/images/articles/gemorroj/kal.jpg" alt="запор при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/kal.jpg" alt="запор при геморрое" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/zapor/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -299,7 +304,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/tyajest.jpg" alt="Поднятие тяжестей" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/tyajest.jpg" alt="Поднятие тяжестей" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/tyajesty/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -316,7 +321,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
-<img src="/assets/images/articles/gemorroj/gem-pit.png" alt="питание при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/gem-pit.png" alt="питание при геморрое" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/pitanie/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -333,7 +338,7 @@
   1 мин на чтение
 </span>
         <p><em>Полное и окончательное избавление от геморроя возможно лишь, наладив процесс дефекации</em>
-<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/defekacion/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -350,7 +355,7 @@
   менее 1 мин на чтение
 </span>
         <p><em>Перечислен перечень того, что нужно делать чтобы избавиться от геморроя</em>
-<img src="/assets/images/articles/gemorroj/check-list.png" alt="check-list" loading="lazy"></p>
+<img src="/assets/images/articles/gemorroj/check-list.png" alt="check-list" loading="lazy" decoding="async"></p>
 
       <a href="/gemorroj/check-list/" class="read-more btn btn--info">Читать дальше</a>
     </article>
@@ -449,7 +454,7 @@
   -->
 </div>
 
-<div class="page__footer-copyright">© 2020 Селизовский Владимир Васильевич. </div>
+<div class="page__footer-copyright">© 2023 Селизовский Владимир Васильевич. </div>
 <div class="page__footer-copyright">
 <p><a href="/legal/terms/">Условия и политика конфиденциальности</a></p>
 <p><a href="#" class="back_to_top">Наверх</a></p>
@@ -464,6 +469,7 @@
     
   <script src="/assets/js/main.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+
 
 
 <!-- Including InstantSearch.js library and styling -->
@@ -520,6 +526,7 @@ search.addWidget(
 // Starting the search
 search.start();
 </script>
+
 
 
 
